update system to avoid whitespace gap in inline block

--- a/css/components/_list-slide.scss
+++ b/css/components/_list-slide.scss
@@ -1,5 +1,14 @@
 $ShadowSize: 80px;
 
+@font-face{
+  font-family: 'NoSpace';
+  src: url('components/zerowidthspaces.eot');
+  src: url('components/zerowidthspaces.eot?#iefix') format('embedded-opentype'),
+       url('components/zerowidthspaces.woff') format('woff'),
+       url('components/zerowidthspaces.ttf') format('truetype'),
+       url('components/zerowidthspaces.svg#NoSpace') format('svg');
+}
+
 .listslide {
   overflow: hidden;
   min-width: 300px;
@@ -7,6 +16,7 @@ $ShadowSize: 80px;
   position: relative;
   white-space: nowrap;
   padding-top:20px;
+
   &:before, &:after {
     display: block;
     content: " ";
@@ -31,22 +41,20 @@ $ShadowSize: 80px;
 }
 .listslide ul {
   white-space: nowrap;
+  *display: inline;
   display: inline-block;
+  font-family: NoSpace;
 }
 .listslide li {
+  *display: inline;
   display: inline-block;
   vertical-align: middle;
+  font-family: NoSpace;
 }
+
+/* specific to skin */
 .customer-list li {
   max-width: 100px;
   padding: 20px;
   height: 50px;
-}
-
-.cq-editmode .listslide ul {
-  display:block;
-  @include clearfix();
-}
-.logo-list-item-comp {
-  float:left;
 }
